refactor: Se rediseñaron los modales
