# src/app/data/models/project/project-create-request.model.ts
@@ -1,15 +1,3 @@
-import { ProjectImageType } from './project-image-type.enum';
-
-export interface ProjectImageCreateRequest {
-  url: string;
-  titulo?: string | null;
-  descripcion?: string | null;
-  alt?: string | null;
-  tipo: ProjectImageType;
-  esPrincipal?: boolean | null;
-  orden?: number | null;
-}
-
 export interface ProjectCreateRequest {
   nombre: string;
   slug: string;
@@ -17,9 +5,11 @@ export interface ProjectCreateRequest {
   ubicacion?: string | null;
   fechaProyecto?: string | null;
   descripcion: string;
+  imagenUrl?: string | null;
+  imagenAlt?: string | null;
   destacado?: boolean | null;
   activo?: boolean | null;
   orden?: number | null;
   servicioIds?: string[] | null;
-  imagenes?: ProjectImageCreateRequest[] | null;
 }
+
